--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ backcall==0.2.0
 beautifulsoup4==4.12.2
 bleach==6.1.0
 blinker==1.7.0
+blosc2==2.7.1
 certifi==2023.7.22
 cffi==1.16.0
 charset-normalizer==3.3.0
@@ -82,11 +83,13 @@ multidict==6.0.4
 nbclient==0.8.0
 nbconvert==7.9.2
 nbformat==5.9.2
+ndindex==1.9.2
 nest-asyncio==1.5.8
 NEURON==8.2.3
 notebook==7.0.6
 notebook_shim==0.2.3
 numba==0.58.0
+numexpr==2.10.1
 numpy==1.25.2
 opencv-python==4.9.0.80
 overrides==7.4.0
@@ -104,6 +107,7 @@ prompt-toolkit==3.0.39
 psutil==5.9.6
 ptyprocess==0.7.0
 pure-eval==0.2.2
+py-cpuinfo==9.0.0
 pycparser==2.21
 pycryptodomex==3.19.0
 Pygments==2.16.1
@@ -132,6 +136,7 @@ six==1.16.0
 sniffio==1.3.0
 soupsieve==2.5
 stack-data==0.6.3
+tables==3.10.1
 terminado==0.17.1
 tinycss2==1.2.1
 tomli==2.0.1
